<resources>
    <string name="app_name">Learn Cards</string>
    <string name="subscribeButton">CADASTRAR</string>
    <string name="loginButton">LOGAR</string>

    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_fragment_profile">Perfil</string>
    <string name="ID">ID</string>
    <string name="titulo_assunto">Titulo</string>
    <string name="nome_sub_area">text</string>
    <string name="assunto_image">TODO</string>
    <string name="nav_user_name">Seu nome</string>
    <string name="nav_user_email">seuemail@gmail.com</string>
    <string name="nav_user_photo">TODO</string>
    <string name="nome_do_usuario">Nome do usuário</string>
    <string name="email_image">Email</string>
    <string name="email_do_usuario">Email do usuário</string>
    <string name="voce_nao_tem_assuntos">Você não possui nenhum assunto assunto selecionado.</string>
    <string name="botao_escolher_assuntos">ESCOLHER ASSUNTOS</string>
    <string name="comece_a_estudar">Comece a estudar!</string>
    <string name="cartoes_disponiveis">Cartões Disponíveis</string>
    <string name="plus_button">TODO</string>
    <string name="avaliacao_tilulo">Avaliação</string>
    <string name="comentario_texto">Comentário:</string>
    <string name="terminar_button">TERMINAR</string>
    <string name="pergunta_titulo">Pergunta 1</string>
    <string name="aqui_vai_a_pergunta">Aqui vai a pergunta</string>
    <string name="alternativa_a">Alternativa A</string>
    <string name="alternativa_b">Alternativa B</string>
    <string name="alternativa_c">Alternativa C</string>
    <string name="alternativa_d">Alternativa D</string>
    <string name="alternativa_e">Alternativa E</string>
    <string name="pr_xima">PRÓXIMA</string>
    <string name="nome_do_sub_tema">Nome do sub-tema</string>
    <string name="descricao_titulo">Descrição</string>
    <string name="descricao_texto">Nunc tempor finibus ullamcorper. Proin sodales malesuada auctor. Ut a dolor elementum nunc imperdiet consectetur eget in arcu.</string>
    <string name="aplicacao_titulo">Aplicação</string>
    <string name="aplicacao_texto">Nunc tempor finibus ullamcorper. Proin sodales malesuada auctor. Ut a dolor elementum nunc imperdiet consectetur eget in arcu.</string>
    <string name="perguntas_button">PERGUNTAS</string>
    <string name="card_title">Card Title</string>
    <string name="card_subject">Card Subject</string>
    <string name="crie_sua_conta_e_comece_a_aprender">Crie sua conta e comece a aprender!</string>
    <string name="cadastrar_button">CADASTRAR</string>
    <string name="nome_register">nome</string>
    <string name="senha_de_novo_register">senha de novo</string>
    <string name="confirmar_button">CONFIRMAR</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="salvar_alteracoes">Salvar alterações</string>
    <string name="confirmar_senha">confirmar senha</string>
    <string name="novo_nome_de_usuario">novo nome de usuário</string>
    <string name="alterar_credenciais">Alterar Credenciais</string>
    <string name="cartoes">Cartões</string>
    <string name="perfil">Perfil</string>
    <string name="sair">Sair</string>
    <string name="id_do_usu_ario">id do usuário</string>
    <string name="convidar_amigo">Convidar amigo</string>
</resources>
