<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lessonSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="15pt"
        android:text="@string/nome_do_sub_tema"/>

    <TextView
        android:id="@+id/descriptionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15pt"
        android:layout_marginRight="15pt"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/descricao_titulo"/>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15pt"
        android:layout_marginRight="15pt"
        android:layout_marginTop="5pt"
        android:text="@string/descricao_texto"/>

    <TextView
        android:id="@+id/applicationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/descriptionText"
        android:layout_marginLeft="15pt"
        android:layout_marginRight="15pt"
        android:layout_marginTop="10pt"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/aplicacao_titulo"/>

    <TextView
        android:id="@+id/applicationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15pt"
        android:layout_marginRight="15pt"
        android:layout_marginTop="5pt"
        android:text="@string/aplicacao_texto"/>

    <Button
        android:id="@+id/questionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:background="@color/buttonColor"
        android:layout_marginTop="10pt"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/perguntas_button"/>
</LinearLayout>