<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/subject_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/titulo_assunto"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/sub_area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_sub_area"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:maxLines="1"
            android:layout_below="@+id/subject_title_text"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:layout_marginStart="5dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_alignParentEnd="true"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel"
            android:visibility="gone"
            android:contentDescription="@string/assunto_image" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>